# webpulse-ai-visibility-assessment

./: .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/models/: database.py  orm.py  schemas.py
backend/app/services/: ai_workflow.py  analysis_engine.py  crm.py  email_service.py  security.py
backend/app/workers/: jobs.py
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: calendly-script.tsx  globals.css  layout.tsx  page.tsx
frontend/src/app/report/[id]/: page.tsx
frontend/src/lib/: api.ts
